# BT_Lite

./: .gitignore  CMakeLists.txt  Header.plantuml  LoggingJSON.plantuml  UML.plantuml  readme.md
FlatBuffer/: BT_Logger_generated.h
generator/: BTGen.py  BT_generator.py  BehaviorTree.xml  Tree.fbl  mergedLog.fbl  now.cpp  now.cpp.em  test.xml  test2.xml  testtt.xml
generator/Generator/: GenBase.py  GenCommon.py  Generator.py  emInterpreter.py
generator/Generator/GenCustoms/: GenClassname.py  GenCommon.py  GenCustomClassname.py  GenCustoms.py  GenEnums.py  GenNodes.py  GenParams.py
generator/Generator/GenFlatBuffer/: Gen.py  LogMerge.py
generator/Generator/GenFlatBuffer/LogSerialization/: BehaviorTree.py  NodeModel.py  NodeStatus.py  NodeType.py  PortConfig.py  PortDirection.py  PortModel.py  StatusChange.py  StatusChangeLog.py  Timestamp.py  TreeNode.py
generator/Generator/GenFlatBufferXML/: GenFlatBufferXML.py
generator/Generator/template/: Delegate.h.em  Logger.h.em  MAIN.h.em  NodeBase.h.em  Nodes.h.em  ParamBase.h.em  Params.h.em
generator/Generator/template/base/: Enums_base.h.em  Params_base.h.em
generator/GrootXMLParser/: EnumsStructs.py  GrootXMLParser.py  ParseTotalTree.py  ParseTreeNodesModel.py  ParseVariable.py
include/BT_TEST/: BT_TEST.h  Enums.h  Logger.h  NodeBase.h  ParamBase.h  Params.h
include/BT_TEST/base/: Enums_base.h  Nodes_base.h
include/BT_TEST/base/Controls/: FallBack.h  (+12 more)
include/FlatBuffer/: BT_Logger.fbs
include/FlatBuffer/cpp/: flatbuffers.h
include/LogMaker/: LogStruct.hpp
src/: LogMaker.cpp  test.cpp  test2.cpp
(+50 files in other folders)
